--- a/.gitignore
+++ b/.gitignore
@@ -15,5 +15,8 @@ results
 
 node_modules
 
+*.scss
+*.css.map
+
 #Actually, need to track these for site to run on Github Pages..
 #bower_components
